cubox : update defconfig file

--- a/config/defconfigs/geexbox-xbmc-armada5xx-cubox.conf
+++ b/config/defconfigs/geexbox-xbmc-armada5xx-cubox.conf
@@ -2,7 +2,7 @@
 # Automatically generated file; DO NOT EDIT.
 # OpenBricks Configuration
 #
-CONFIG_KERNELVERSION="devel-20120730-r14886"
+CONFIG_KERNELVERSION="devel-20120710-r14678"
 CONFIG_MODULES=y
 # CONFIG_FLAVOUR_base is not set
 CONFIG_FLAVOUR_geexbox=y
@@ -102,16 +102,16 @@ CONFIG_OPT_CONCURRENCY_MAKE_LEVEL=3
 # CONFIG_OPT_TARGET_ISO is not set
 CONFIG_OPT_TARGET_FLAT=y
 # CONFIG_OPT_TARGET_PXE is not set
-# CONFIG_OPT_TARGET_TARBALL is not set
+CONFIG_OPT_TARGET_TARBALL=y
 # CONFIG_OPT_TARGET_EXT2FS is not set
 # CONFIG_OPT_TARGET_INITRAMFS is not set
 CONFIG_OPT_PACKAGE_REPO=y
 CONFIG_TIMEZONE=y
 CONFIG_OPT_INCLUDED_TIMEZONES="all"
 CONFIG_OPT_TIMEZONE=""
-CONFIG_KEYMAP_QWERTY=y
-# CONFIG_KEYMAP_AZERTY is not set
-# CONFIG_KEYMAP_QWERTZ is not set
+CONFIG_KEYMAP_US=y
+# CONFIG_KEYMAP_FR is not set
+# CONFIG_KEYMAP_DE is not set
 CONFIG_LOCALE=y
 CONFIG_OPT_INCLUDED_LOCALES=""
 CONFIG_OPT_DEFAULT_LOCALE="en_US.UTF-8"
@@ -125,7 +125,7 @@ CONFIG_TAINT=y
 # Audio
 #
 CONFIG_USE_alsa=y
-# CONFIG_USE_pulseaudio is not set
+CONFIG_USE_pulseaudio=y
 
 #
 # Graphics Display
@@ -229,7 +229,7 @@ CONFIG_OPT_SAMBA=y
 # CONFIG_PKG_debug is not set
 # CONFIG_PKG_dietsplash is not set
 # CONFIG_PKG_ndiswrapper-tool is not set
-# CONFIG_PKG_nvram-wakeup is not set
+CONFIG_PKG_nvram-wakeup=y
 CONFIG_PKG_opkg=y
 # CONFIG_PKG_pcmciautils is not set
 # CONFIG_PKG_plymouth-lite is not set
@@ -365,7 +365,7 @@ CONFIG_PKG_SDL=y
 CONFIG_OPT_SDL_xorg=y
 # CONFIG_OPT_SDL_touchscreen is not set
 # CONFIG_OPT_SDL_directfb is not set
-# CONFIG_OPT_SDL_pulseaudio is not set
+CONFIG_OPT_SDL_pulseaudio=y
 CONFIG_OPT_SDL_devtools=y
 CONFIG_OPT_SDL_opengl=y
 # CONFIG_PKG_SDL-gfx is not set
@@ -448,7 +448,7 @@ CONFIG_PKG_i18n=y
 # CONFIG_PKG_imx6-graphics is not set
 # CONFIG_PKG_imx6-lib is not set
 CONFIG_PKG_jasper=y
-# CONFIG_PKG_json is not set
+CONFIG_PKG_json=y
 # CONFIG_PKG_json-glib is not set
 # CONFIG_PKG_kissfft is not set
 # CONFIG_PKG_lame is not set
@@ -522,7 +522,7 @@ CONFIG_PKG_libsamplerate=y
 # CONFIG_PKG_libshout is not set
 # CONFIG_PKG_libsigc is not set
 CONFIG_PKG_libsmbclient=y
-# CONFIG_PKG_libsndfile is not set
+CONFIG_PKG_libsndfile=y
 # CONFIG_PKG_libsoup is not set
 CONFIG_PKG_libssh=y
 # CONFIG_PKG_libsvg is not set
@@ -573,7 +573,7 @@ CONFIG_OPT_sg3utils_devtools=y
 # CONFIG_PKG_smpeg is not set
 # CONFIG_PKG_sofia-sip is not set
 # CONFIG_PKG_spandsp is not set
-# CONFIG_PKG_speex is not set
+CONFIG_PKG_speex=y
 CONFIG_PKG_sqlite=y
 # CONFIG_OPT_sqlite_devtools is not set
 # CONFIG_PKG_sysfsutils is not set
@@ -621,7 +621,9 @@ CONFIG_PKG_zlib=y
 # CONFIG_PKG_nbench is not set
 # CONFIG_PKG_powerdebug is not set
 # CONFIG_PKG_powertop is not set
-# CONFIG_PKG_pvr is not set
+CONFIG_PKG_pvr=y
+CONFIG_OPT_pvr_tvheadend=y
+CONFIG_OPT_pvr_vdr=y
 # CONFIG_PKG_rsync is not set
 # CONFIG_PKG_stream is not set
 # CONFIG_PKG_uci is not set
@@ -654,7 +656,8 @@ CONFIG_PKG_zlib=y
 # CONFIG_PKG_gst-plugins-ugly is not set
 # CONFIG_PKG_gst-vaapi is not set
 # CONFIG_PKG_gstreamer is not set
-# CONFIG_PKG_libav is not set
+CONFIG_PKG_libav=y
+# CONFIG_OPT_libav_vaapi is not set
 CONFIG_PKG_libbluray=y
 CONFIG_OPT_libbluray_aacs=y
 # CONFIG_PKG_libdce is not set
@@ -684,14 +687,15 @@ CONFIG_PKG_libdvdcss=y
 # CONFIG_PKG_ti-dsp is not set
 # CONFIG_PKG_ti-omap3-omxil is not set
 # CONFIG_PKG_ti-omap4-domx is not set
-# CONFIG_PKG_tvheadend is not set
-# CONFIG_PKG_vdr is not set
+CONFIG_PKG_tvheadend=y
+# CONFIG_OPT_tvheadend_zeroconf is not set
+CONFIG_PKG_vdr=y
 # CONFIG_PKG_vdr-avards is not set
 # CONFIG_PKG_vdr-devstatus is not set
 # CONFIG_PKG_vdr-dummydevice is not set
 # CONFIG_PKG_vdr-dvbsddevice is not set
 # CONFIG_PKG_vdr-dvd is not set
-# CONFIG_PKG_vdr-dynamite is not set
+CONFIG_PKG_vdr-dynamite=y
 # CONFIG_PKG_vdr-eepg is not set
 # CONFIG_PKG_vdr-epgsearch is not set
 # CONFIG_PKG_vdr-extrecmenu is not set
@@ -707,7 +711,7 @@ CONFIG_PKG_libdvdcss=y
 # CONFIG_PKG_vdr-osdpip is not set
 # CONFIG_PKG_vdr-osdteletext is not set
 # CONFIG_PKG_vdr-pcd is not set
-# CONFIG_PKG_vdr-plugin-xvdr is not set
+CONFIG_PKG_vdr-plugin-xvdr=y
 # CONFIG_PKG_vdr-pvr350 is not set
 # CONFIG_PKG_vdr-pvrinput is not set
 # CONFIG_PKG_vdr-radio is not set
@@ -742,14 +746,14 @@ CONFIG_OPT_xbmc_zeroconf=y
 CONFIG_OPT_xbmc_webserver=y
 # CONFIG_OPT_xbmc_vaapi is not set
 # CONFIG_OPT_xbmc_crystalhd is not set
-# CONFIG_OPT_xbmc_pulseaudio is not set
+CONFIG_OPT_xbmc_pulseaudio=y
 CONFIG_OPT_xbmc_dvdcss=y
 CONFIG_OPT_xbmc_bluray=y
 CONFIG_OPT_xbmc_rtmp=y
 CONFIG_OPT_xbmc_nonfree=y
 # CONFIG_OPT_xbmc_externalffmpeg is not set
 # CONFIG_OPT_xbmc_externalffmpeglibav is not set
-# CONFIG_OPT_xbmc_pvr is not set
+CONFIG_OPT_xbmc_pvr=y
 CONFIG_OPT_xbmc_addons=y
 CONFIG_OPT_xbmc_libcec=y
 CONFIG_OPT_xbmc_libnfs=y
@@ -761,7 +765,7 @@ CONFIG_OPT_xbmc_dove=y
 CONFIG_OPT_xbmc_xorg=y
 CONFIG_OPT_xbmc_sdl=y
 CONFIG_OPT_xbmc_alsa=y
-# CONFIG_PKG_xbmc-addon-vdr is not set
+CONFIG_PKG_xbmc-addon-vdr=y
 # CONFIG_PKG_xine-bluray is not set
 # CONFIG_PKG_xine-lib is not set
 # CONFIG_PKG_xine-ui is not set
@@ -779,7 +783,9 @@ CONFIG_PKG_connman=y
 CONFIG_OPT_connman_wifi=y
 # CONFIG_OPT_connman_bluetooth is not set
 # CONFIG_PKG_connman-tools is not set
-# CONFIG_PKG_dropbear is not set
+CONFIG_PKG_dropbear=y
+CONFIG_OPT_dropbear_dbclient=y
+CONFIG_OPT_dropbear_scp=y
 # CONFIG_PKG_gatling is not set
 # CONFIG_PKG_hostapd is not set
 CONFIG_PKG_iptables=y
@@ -908,18 +914,18 @@ CONFIG_PKG_python-simplejson=y
 # sound
 #
 CONFIG_PKG_alsa=y
-# CONFIG_OPT_alsa_pulseaudio is not set
+CONFIG_OPT_alsa_pulseaudio=y
 CONFIG_PKG_alsa-lib=y
-# CONFIG_PKG_alsa-plugins is not set
+CONFIG_PKG_alsa-plugins=y
 CONFIG_PKG_alsa-utils=y
 CONFIG_OPT_alsautils_devtools=y
-# CONFIG_PKG_pulseaudio is not set
+CONFIG_PKG_pulseaudio=y
 # CONFIG_PKG_rtaudio is not set
 
 #
 # system
 #
-CONFIG_PKG_automountd=y
+# CONFIG_PKG_automountd is not set
 CONFIG_PKG_base-files=y
 CONFIG_PKG_bash=y
 CONFIG_PKG_busybox=y
@@ -1022,6 +1028,7 @@ CONFIG_OPT_usbutils_devtools=y
 CONFIG_PKG_xbmc-addon-bluecop=y
 CONFIG_PKG_xbmc-addon-geexbox-network=y
 CONFIG_PKG_xbmc-addon-geexbox-updater=y
+CONFIG_PKG_xbmc-addon-navi-x=y
 # CONFIG_PKG_xdotool is not set
 # CONFIG_PKG_xvattr is not set
 
@@ -1103,7 +1110,7 @@ CONFIG_OPT_FPU_OPTIMIZATIONS="vfp3-d16"
 CONFIG_OPT_TOOLCHAIN_TYPE="linaro"
 CONFIG_OPT_COMPRESSION_METHOD="gzip"
 CONFIG_OPT_TARGET_LIBC="eglibc"
-CONFIG_OPT_KEYMAP="qwerty"
+CONFIG_OPT_KEYMAP="us"
 CONFIG_OPT_EGL_PROVIDER="vivante"
 CONFIG_OPT_GLES_PROVIDER="vivante"
 CONFIG_OPT_NETWORK_BACKEND="connman"
