EFL ecore edbus edje eet eeze efreet eina elementary embryo ethumb evas expedite imlib2: switch to svn build - 75100

--- a/packages/ecore/build
+++ b/packages/ecore/build
@@ -34,6 +34,9 @@ fi
 
 cd $BUILD/$1*
 
+setup_toolchain host
+NOCONFIGURE=yes ./autogen.sh
+
 mkdir -p objdir-host
 cd objdir-host
 export ac_cv_header_X11_X_h=no
@@ -71,6 +74,9 @@ do_configure host \
 make
 make_install toolchain
 cd ..
+
+setup_toolchain target
+NOCONFIGURE=yes ./autogen.sh
 
 mkdir -p objdir-target
 cd objdir-target
