--- a/packages/edbus/build
+++ b/packages/edbus/build
@@ -3,6 +3,8 @@
 . config/options
 
 cd $BUILD/$1*
+setup_toolchain target
+NOCONFIGURE=yes ./autogen.sh
 do_configure \
   --disable-doc \
   --disable-ebluez \
