--- a/packages/elementary/build
+++ b/packages/elementary/build
@@ -4,7 +4,12 @@
 
 [ "$TARGET_LIBC" = "uclibc" ] && export LDFLAGS="$LDFLAGS -liconv"
 
+
 cd $BUILD/$1*
+
+setup_toolchain target
+NOCONFIGURE=yes ./autogen.sh
+
 do_configure \
             --disable-doc \
             --disable-edbus \
