--- a/packages/embryo/build
+++ b/packages/embryo/build
@@ -4,6 +4,9 @@
 
 cd $BUILD/$1*
 
+setup_toolchain host
+NOCONFIGURE=yes ./autogen.sh
+
 mkdir -p objdir-host
 cd objdir-host
 do_configure host \
@@ -13,6 +16,9 @@ do_configure host \
 make
 make_install toolchain
 cd ..
+
+setup_toolchain target
+NOCONFIGURE=yes ./autogen.sh
 
 mkdir -p objdir-target
 cd objdir-target
