--- a/packages/ethumb/build
+++ b/packages/ethumb/build
@@ -3,6 +3,10 @@
 . config/options
 
 cd $BUILD/$1*
+
+setup_toolchain target
+NOCONFIGURE=yes ./autogen.sh
+
 do_configure \
   --disable-doc \
   --disable-emotion \
