--- a/packages/evas/build
+++ b/packages/evas/build
@@ -33,6 +33,9 @@ pkg_uses $1 uclibc && EXTRA_LIBS="-liconv $EXTRA_LIBS"
 
 cd $BUILD/$1*
 
+setup_toolchain host
+NOCONFIGURE=yes ./autogen.sh
+
 mkdir -p objdir-host
 cd objdir-host
 export ac_cv_header_X11_X_h=no
@@ -58,6 +61,9 @@ do_configure host \
 make
 make_install toolchain
 cd ..
+
+setup_toolchain target
+NOCONFIGURE=yes ./autogen.sh
 
 mkdir -p objdir-target
 cd objdir-target
