--- a/packages/enna/build
+++ b/packages/enna/build
@@ -100,7 +100,9 @@ fi
 
 cd $BUILD/$1*
 export LIBS="$EXTRA_LIBS -lintl -lm -lecore_x -lX11 -lecore_input -lethumb_client"
-sed -i "s%eina-0%eina%g" configure
+setup_toolchain target
+NOCONFIGURE=yes ./autogen.sh
+#sed -i "s%eina-0%eina%g" configure
 do_configure \
             --enable-static-modules \
             $BOOK_OPT \
