MPlayer: bump to 1.1

--- a/packages/MPlayer/build
+++ b/packages/MPlayer/build
@@ -59,10 +59,15 @@ if [ "$TARGET_ARCH" = arm ]; then
                  --enable-tremor-low \
                  --enable-tremor"
 else
-  VORBIS_CONFIG="--enable-libvorbis \
-                 --disable-tremor-internal \
-                 --disable-tremor-low \
-                 --disable-tremor"
+  VORBIS_CONFIG="--disable-libvorbis \
+                 --enable-tremor-internal \
+                 --enable-tremor-low \
+                 --enable-tremor"
+
+#  VORBIS_CONFIG="--enable-libvorbis \
+#                 --disable-tremor-internal \
+#                 --disable-tremor-low \
+#                 --disable-tremor"
 fi
 
 
@@ -78,7 +83,6 @@ export CFLAGS="$CFLAGS -ffast-math -DFIXED_POINT"
 cd $BUILD/$1*
 #rm -rf libavcodec # ensure we check for headers in external ffmpeg
 
-LIBAV="--enable-libavcodec_so --enable-libavformat_so --enable-libavutil_so --enable-libpostproc_so --enable-libswscale_so"
 
 if [ "$TARGET_ARCH" = arm ] ; then
   for f in ftree-loop-distribution \
@@ -96,7 +100,6 @@ fi
             $EXTRA_CONFIG \
             --disable-mencoder \
             --disable-gui \
-            --enable-largefiles \
             --disable-termcap \
             --disable-langinfo \
             --disable-lircc \
@@ -138,7 +141,6 @@ fi
             $VORBIS_CONFIG \
             --enable-theora \
             --enable-faad \
-            --disable-faad-internal \
             --disable-faac \
             --disable-ladspa \
             --disable-libdv \
