--- a/packages/eventlircd/unit/eventlircd.service
+++ b/packages/eventlircd/unit/eventlircd.service
@@ -6,7 +6,7 @@ Before=xorg.service
 [Service]
 EnvironmentFile=/etc/eventlircd.conf
 Type=forking
-ExecStartPre=/bin/mkdir -p /var/run/lirc
+ExecStartPre=/usr/bin/change-rc
 ExecStart=/usr/sbin/eventlircd $EV_OPTS
 
 [Install]
