--- a/config/defconfigs/geexbox-xbmc-armada5xx-cubox.conf
+++ b/config/defconfigs/geexbox-xbmc-armada5xx-cubox.conf
@@ -243,7 +243,8 @@ CONFIG_PKG_opkg=y
 CONFIG_PKG_cryptodev=y
 # CONFIG_PKG_cwiid is not set
 CONFIG_PKG_eventlircd=y
-# CONFIG_PKG_lirc is not set
+CONFIG_PKG_lirc=y
+CONFIG_OPT_lirc_devtools=y
 # CONFIG_PKG_s2-liplianin is not set
 # CONFIG_PKG_sgx530-OMAP34xx-drv is not set
 # CONFIG_PKG_sgx540-OMAP44xx-drv is not set
@@ -478,7 +479,7 @@ CONFIG_OPT_libdvdread_dvdcss=y
 CONFIG_PKG_libevent=y
 CONFIG_PKG_libexif=y
 CONFIG_PKG_libffi=y
-# CONFIG_PKG_libftdi is not set
+CONFIG_PKG_libftdi=y
 # CONFIG_PKG_libg7221 is not set
 CONFIG_PKG_libgcrypt=y
 CONFIG_PKG_libgles-gc=y
