tvheadend : update to new repo and community version 3.0 + commit 1c96e30d

--- a/packages/tvheadend/build
+++ b/packages/tvheadend/build
@@ -2,7 +2,9 @@
 
 . config/options
 
-cd $BUILD/$1*
+get_meta $1
+
+cd $PKG_BUILD_DIR
 
 if pkg_uses $1 zeroconf; then
   CFG_AVAHI="--enable-avahi"
