scripts/get: check if packages, machine, platform, flavour meta has been updated to decide if download is needed

--- a/packages/cmake/build
+++ b/packages/cmake/build
@@ -4,6 +4,9 @@
 
 cd $BUILD/$1*
 
-do_configure host --no-qt-gui
+setup_toolchain host
+
+./bootstrap --no-qt-gui --prefix=/usr
+
 make
 make_install toolchain
