update defconfig for panda

--- a/config/defconfigs/geexbox-xbmc-omap4-pandaboard.conf
+++ b/config/defconfigs/geexbox-xbmc-omap4-pandaboard.conf
@@ -2,7 +2,7 @@
 # Automatically generated file; DO NOT EDIT.
 # OpenBricks Configuration
 #
-CONFIG_KERNELVERSION="devel-20120730-r14886"
+CONFIG_KERNELVERSION="devel-20120710-r14678"
 CONFIG_MODULES=y
 # CONFIG_FLAVOUR_base is not set
 CONFIG_FLAVOUR_geexbox=y
@@ -112,9 +112,9 @@ CONFIG_OPT_TARGET_OMAP_TARBALL=y
 # CONFIG_OPT_TARGET_INITRAMFS is not set
 CONFIG_OPT_PACKAGE_REPO=y
 # CONFIG_TIMEZONE is not set
-CONFIG_KEYMAP_QWERTY=y
-# CONFIG_KEYMAP_AZERTY is not set
-# CONFIG_KEYMAP_QWERTZ is not set
+# CONFIG_KEYMAP_US is not set
+CONFIG_KEYMAP_FR=y
+# CONFIG_KEYMAP_DE is not set
 CONFIG_OPT_SUB_CHARSET="en"
 CONFIG_LOCALE=y
 CONFIG_OPT_INCLUDED_LOCALES="en_US.UTF-8"
@@ -236,7 +236,7 @@ CONFIG_OPT_SAMBA=y
 # CONFIG_PKG_debug is not set
 # CONFIG_PKG_dietsplash is not set
 # CONFIG_PKG_ndiswrapper-tool is not set
-# CONFIG_PKG_nvram-wakeup is not set
+CONFIG_PKG_nvram-wakeup=y
 CONFIG_PKG_opkg=y
 # CONFIG_PKG_pcmciautils is not set
 # CONFIG_PKG_plymouth-lite is not set
@@ -268,10 +268,11 @@ CONFIG_PKG_fuse=y
 # CONFIG_PKG_fuse-exfat is not set
 # CONFIG_PKG_fuseiso is not set
 # CONFIG_PKG_gnu-fdisk is not set
+# CONFIG_PKG_mpd is not set
 # CONFIG_PKG_mtd-utils is not set
 CONFIG_PKG_nfs-utils=y
 CONFIG_PKG_ntfs-3g=y
-# CONFIG_PKG_parted is not set
+CONFIG_PKG_parted=y
 # CONFIG_PKG_unionfs-fuse is not set
 
 #
@@ -465,7 +466,7 @@ CONFIG_PKG_jasper=y
 # CONFIG_PKG_libSockets is not set
 CONFIG_PKG_libaacs=y
 CONFIG_PKG_libass=y
-# CONFIG_PKG_libatasmart is not set
+CONFIG_PKG_libatasmart=y
 # CONFIG_PKG_libavc1394 is not set
 # CONFIG_PKG_libbmm is not set
 # CONFIG_PKG_libbridge is not set
@@ -576,7 +577,8 @@ CONFIG_PKG_pcre=y
 # CONFIG_PKG_qt-qmf is not set
 # CONFIG_PKG_readline is not set
 # CONFIG_PKG_rest is not set
-# CONFIG_PKG_sg3-utils is not set
+CONFIG_PKG_sg3-utils=y
+CONFIG_OPT_sg3utils_devtools=y
 # CONFIG_PKG_smpeg is not set
 # CONFIG_PKG_sofia-sip is not set
 # CONFIG_PKG_spandsp is not set
@@ -628,7 +630,9 @@ CONFIG_PKG_zlib=y
 # CONFIG_PKG_nbench is not set
 # CONFIG_PKG_powerdebug is not set
 # CONFIG_PKG_powertop is not set
-# CONFIG_PKG_pvr is not set
+CONFIG_PKG_pvr=y
+# CONFIG_OPT_pvr_tvheadend is not set
+CONFIG_OPT_pvr_vdr=y
 # CONFIG_PKG_rsync is not set
 # CONFIG_PKG_stream is not set
 # CONFIG_PKG_uci is not set
@@ -707,10 +711,11 @@ CONFIG_OPT_sgx540OpenGLES_xorg=y
 # CONFIG_PKG_ti-omap3-omxil is not set
 # CONFIG_PKG_ti-omap4-domx is not set
 # CONFIG_PKG_tvheadend is not set
-# CONFIG_PKG_vdr is not set
+CONFIG_PKG_vdr=y
 # CONFIG_PKG_vdr-avards is not set
 # CONFIG_PKG_vdr-devstatus is not set
 # CONFIG_PKG_vdr-dummydevice is not set
+# CONFIG_PKG_vdr-dvbapi is not set
 # CONFIG_PKG_vdr-dvbsddevice is not set
 # CONFIG_PKG_vdr-dvd is not set
 # CONFIG_PKG_vdr-dynamite is not set
@@ -729,7 +734,7 @@ CONFIG_OPT_sgx540OpenGLES_xorg=y
 # CONFIG_PKG_vdr-osdpip is not set
 # CONFIG_PKG_vdr-osdteletext is not set
 # CONFIG_PKG_vdr-pcd is not set
-# CONFIG_PKG_vdr-plugin-xvdr is not set
+CONFIG_PKG_vdr-plugin-xvdr=y
 # CONFIG_PKG_vdr-pvr350 is not set
 # CONFIG_PKG_vdr-pvrinput is not set
 # CONFIG_PKG_vdr-radio is not set
@@ -771,7 +776,7 @@ CONFIG_OPT_xbmc_rtmp=y
 CONFIG_OPT_xbmc_nonfree=y
 # CONFIG_OPT_xbmc_externalffmpeg is not set
 # CONFIG_OPT_xbmc_externalffmpeglibav is not set
-# CONFIG_OPT_xbmc_pvr is not set
+CONFIG_OPT_xbmc_pvr=y
 CONFIG_OPT_xbmc_addons=y
 CONFIG_OPT_xbmc_libcec=y
 CONFIG_OPT_xbmc_libnfs=y
@@ -783,7 +788,7 @@ CONFIG_OPT_xbmc_gstreamer=y
 CONFIG_OPT_xbmc_xorg=y
 CONFIG_OPT_xbmc_sdl=y
 CONFIG_OPT_xbmc_alsa=y
-# CONFIG_PKG_xbmc-addon-vdr is not set
+CONFIG_PKG_xbmc-addon-vdr=y
 # CONFIG_PKG_xine-bluray is not set
 # CONFIG_PKG_xine-lib is not set
 # CONFIG_PKG_xine-ui is not set
@@ -941,7 +946,7 @@ CONFIG_OPT_alsautils_devtools=y
 #
 # system
 #
-CONFIG_PKG_automountd=y
+# CONFIG_PKG_automountd is not set
 CONFIG_PKG_base-files=y
 CONFIG_PKG_bash=y
 CONFIG_PKG_busybox=y
@@ -956,7 +961,7 @@ CONFIG_OPT_dbus_xorg=y
 CONFIG_PKG_eglibc=y
 # CONFIG_OPT_eglibc_devtools is not set
 # CONFIG_OPT_eglibc_ipv6 is not set
-# CONFIG_PKG_eglibc-gconv-extra is not set
+CONFIG_PKG_eglibc-gconv-extra=y
 CONFIG_PKG_eglibc-gconv-minimal=y
 # CONFIG_PKG_eglibc-gdb is not set
 CONFIG_PKG_eglibc-network=y
@@ -992,7 +997,7 @@ CONFIG_OPT_linux_v4l=y
 CONFIG_OPT_linux_wifi=y
 # CONFIG_PKG_llvm is not set
 CONFIG_PKG_pciutils=y
-# CONFIG_PKG_polkit is not set
+CONFIG_PKG_polkit=y
 # CONFIG_PKG_ralink-8070-3070-3370-5372-usb is not set
 # CONFIG_PKG_snowball-init is not set
 CONFIG_PKG_systemd=y
@@ -1003,7 +1008,7 @@ CONFIG_PKG_toolchain=y
 # CONFIG_PKG_uclibc is not set
 # CONFIG_PKG_uclibc-gdb is not set
 # CONFIG_PKG_uclibc-network is not set
-# CONFIG_PKG_udisks is not set
+CONFIG_PKG_udisks=y
 CONFIG_PKG_util-linux-ng=y
 
 #
@@ -1017,7 +1022,7 @@ CONFIG_PKG_dialog=y
 # CONFIG_PKG_dsp-tools is not set
 # CONFIG_PKG_dvb-apps is not set
 # CONFIG_PKG_expedite is not set
-# CONFIG_PKG_extra-fonts-nonfree is not set
+CONFIG_PKG_extra-fonts-nonfree=y
 # CONFIG_PKG_gdb is not set
 # CONFIG_PKG_generator is not set
 # CONFIG_PKG_graphlcd-base is not set
@@ -1032,7 +1037,7 @@ CONFIG_PKG_omapdrmtest=y
 CONFIG_PKG_rtmpdump=y
 # CONFIG_PKG_screen is not set
 # CONFIG_PKG_snowball-mactool is not set
-CONFIG_PKG_strace=y
+# CONFIG_PKG_strace is not set
 # CONFIG_PKG_tools-generator is not set
 # CONFIG_PKG_unrar is not set
 CONFIG_PKG_usbutils=y
@@ -1044,6 +1049,7 @@ CONFIG_OPT_usbutils_devtools=y
 CONFIG_PKG_xbmc-addon-bluecop=y
 CONFIG_PKG_xbmc-addon-geexbox-network=y
 CONFIG_PKG_xbmc-addon-geexbox-updater=y
+# CONFIG_PKG_xbmc-addon-navi-x is not set
 # CONFIG_PKG_xdotool is not set
 # CONFIG_PKG_xvattr is not set
 
@@ -1126,7 +1132,7 @@ CONFIG_OPT_FPU_OPTIMIZATIONS="neon"
 CONFIG_OPT_TOOLCHAIN_TYPE="linaro"
 CONFIG_OPT_COMPRESSION_METHOD="gzip"
 CONFIG_OPT_TARGET_LIBC="eglibc"
-CONFIG_OPT_KEYMAP="qwerty"
+CONFIG_OPT_KEYMAP="fr"
 CONFIG_OPT_EGL_PROVIDER="sgx"
 CONFIG_OPT_GLES_PROVIDER="sgx"
 CONFIG_OPT_OVG_PROVIDER="sgx"
