xf86-video-dove : update xorg.conf

--- a/packages/xf86-video-dove/config/30-cubox.conf
+++ b/packages/xf86-video-dove/config/30-cubox.conf
@@ -1,22 +1,52 @@
+Section "ServerFlags"
+	Option "BlankTime"	"0"
+	Option "StandbyTime"	"0"
+	Option "SuspendTime"	"0"
+	Option "OffTime"	"0"
+EndSection
+
 Section "Monitor"
-        Identifier      "lvds"
-        Option          "PreferredMode" "1920x1080"
-#        Option          "NoDDCValue"  "true"
+	Identifier      "DVI"
+	Option		"Position"	"0 0"
+        Option		"Enable"	"true"
+	Option          "PreferredMode" "1920x1080"
+EndSection
+Section "Monitor"
+	Identifier      "VGA"
+	Option		"Position"	"0 0"
+        Option		"Enable"	"true"
+ 	Option          "PreferredMode" "1920x1080"
 EndSection
 
 Section "Device"
         Identifier      "Driver0"
+        Screen          0
         Driver          "dovefb"
+        Option          "debug" "false"
+        Option          "ExaAccel" "FALSE"
+        Option          "Solid" "TRUE"
+        Option          "Copy" "TRUE"
+        Option          "Composite" "FALSE"
+        Option          "SWSolid" "FALSE"
+        Option          "SWCopy" "FALSE"
+        Option          "Commit" "FALSE"
+        Option          "XvAccel" "TRUE"
+        Option          "HWCursor" "false"
+        Option          "EncFunc" "7"
+        Option          "UseDriverBuiltInMode" "TRUE"
+        Option          "EnableDualDisplay" "true"
+        Option          "Monitor-VGA" "VGA"
+        Option          "Monitor-lvds" "DVI"
 EndSection
 
-#Section "Screen"
-#        Device          "Driver0"
-#        Identifier      "Primary Screen"
-#        Monitor         "lvds"
-#        SubSection "Display"
-#                Depth     24
-#                Modes    "1920x1080" "1360x768" "1280x720" "1024x768" "800x600" "720x480" "640x480"
-#                Virtual 2048 2048
-#        EndSubSection
-#EndSection
+Section "Screen"
+        Device          "Driver0"
+        Identifier      "Primary Screen"
+        DefaultDepth    32
+        DefaultFbBpp    32
+        SubSection      "Display"
+                Viewport 0 0
+                Virtual 2048 2048
+        EndSubSection
+EndSection
 
