libnl: bump to 3.2.11

--- a/packages/libnl/build
+++ b/packages/libnl/build
@@ -4,6 +4,11 @@
 
 cd $BUILD/$1*
 
-do_configure
+do_configure \
+	--disable-cli \
+
+
+# want to use --disable-doc but the configure is broken
+
 make
 make_install
