tcpdump: disable smi, smb; override ipv6 getaddrinfo check

--- a/packages/tcpdump/build
+++ b/packages/tcpdump/build
@@ -11,9 +11,13 @@ pkg_uses $1 ipv6 && OPT_IPV6="--enable-ipv6" || OPT_IPV6="--disable-ipv6"
 # forcing it
 sed -i -e 's/ac_cv_linux_vers=unknown/ac_cv_linux_vers=2/' configure
 
+export td_cv_buggygetaddrinfo=no
+
 do_configure \
        --host=$TARGET_NAME \
        --with-pcap=linux \
+       --disable-smb \
+       --without-smi \
        $OPT_CRYPTO \
        $OPT_IPV6 \
 
