udisks : mount /media with tmpfs filesystem

--- a/packages/udisks/unit/udisks.service
+++ b/packages/udisks/unit/udisks.service
@@ -5,4 +5,5 @@ Description=Storage Daemon
 Type=dbus
 BusName=org.freedesktop.UDisks
 ExecStartPre=/bin/mkdir -p /media /var/run/udisks
+ExecStartPre=/bin/mount -t tmpfs tmpfs /media
 ExecStart=/usr/lib/udisks/udisks-daemon --no-debug
