linux : cubox : update config file & update defconfig file

--- a/config/defconfigs/geexbox-xbmc-armada5xx-cubox.conf
+++ b/config/defconfigs/geexbox-xbmc-armada5xx-cubox.conf
@@ -262,6 +262,7 @@ CONFIG_PKG_fuse=y
 # CONFIG_PKG_fuse-exfat is not set
 # CONFIG_PKG_fuseiso is not set
 # CONFIG_PKG_gnu-fdisk is not set
+CONFIG_PKG_mpd=y
 # CONFIG_PKG_mtd-utils is not set
 CONFIG_PKG_nfs-utils=y
 CONFIG_PKG_ntfs-3g=y
@@ -508,6 +509,7 @@ CONFIG_PKG_libnl=y
 CONFIG_PKG_libogg=y
 # CONFIG_PKG_liboil is not set
 # CONFIG_PKG_libosip2 is not set
+# CONFIG_PKG_libpbc is not set
 # CONFIG_PKG_libpcap is not set
 # CONFIG_PKG_libpcd is not set
 CONFIG_PKG_libplist=y
@@ -607,19 +609,25 @@ CONFIG_PKG_zlib=y
 #
 # misc
 #
+# CONFIG_PKG_alsacap is not set
 # CONFIG_PKG_baresip is not set
+# CONFIG_PKG_chrpath is not set
 # CONFIG_PKG_cpuburn is not set
 # CONFIG_PKG_elfutils is not set
 # CONFIG_PKG_ethtool is not set
+# CONFIG_PKG_evemu is not set
 # CONFIG_PKG_glmark2 is not set
 # CONFIG_PKG_hdmiservice is not set
+# CONFIG_PKG_hiawatha is not set
 # CONFIG_PKG_iioutils is not set
+# CONFIG_PKG_libcheck is not set
 # CONFIG_PKG_libxkbcommon is not set
 # CONFIG_PKG_linphone is not set
 # CONFIG_PKG_madplay is not set
 # CONFIG_PKG_maliit-framework is not set
 # CONFIG_PKG_maliit-plugins is not set
 # CONFIG_PKG_nbench is not set
+# CONFIG_PKG_patchelf is not set
 # CONFIG_PKG_powerdebug is not set
 # CONFIG_PKG_powertop is not set
 CONFIG_PKG_pvr=y
@@ -628,9 +636,11 @@ CONFIG_OPT_pvr_vdr=y
 # CONFIG_PKG_rsync is not set
 # CONFIG_PKG_stream is not set
 # CONFIG_PKG_uci is not set
+# CONFIG_PKG_usbhubctrl is not set
 # CONFIG_PKG_wayland is not set
 # CONFIG_PKG_webrtc-audio-processing is not set
 # CONFIG_PKG_weston is not set
+# CONFIG_PKG_yavta is not set
 
 #
 # multimedia
@@ -674,6 +684,7 @@ CONFIG_PKG_libdvdcss=y
 # CONFIG_PKG_libvdpau is not set
 # CONFIG_PKG_livepause is not set
 # CONFIG_PKG_mali400 is not set
+# CONFIG_PKG_media-ctl is not set
 # CONFIG_PKG_mex is not set
 # CONFIG_PKG_mythplugins is not set
 # CONFIG_PKG_myththemes is not set
@@ -694,6 +705,7 @@ CONFIG_PKG_vdr=y
 # CONFIG_PKG_vdr-avards is not set
 # CONFIG_PKG_vdr-devstatus is not set
 # CONFIG_PKG_vdr-dummydevice is not set
+# CONFIG_PKG_vdr-dvbapi is not set
 # CONFIG_PKG_vdr-dvbsddevice is not set
 # CONFIG_PKG_vdr-dvd is not set
 CONFIG_PKG_vdr-dynamite=y
@@ -739,7 +751,7 @@ CONFIG_PKG_vdr-plugin-xvdr=y
 # CONFIG_PKG_vdr-zaphistory is not set
 # CONFIG_PKG_vlc is not set
 CONFIG_PKG_xbmc=y
-# CONFIG_OPT_xbmc_opengl is not set
+CONFIG_OPT_xbmc_opengl=y
 CONFIG_OPT_xbmc_opengles=y
 # CONFIG_OPT_xbmc_openmax is not set
 CONFIG_OPT_xbmc_joystick=y
@@ -767,6 +779,7 @@ CONFIG_OPT_xbmc_xorg=y
 CONFIG_OPT_xbmc_sdl=y
 CONFIG_OPT_xbmc_alsa=y
 CONFIG_PKG_xbmc-addon-vdr=y
+CONFIG_PKG_xbmc-addon-vuplus=y
 # CONFIG_PKG_xine-bluray is not set
 # CONFIG_PKG_xine-lib is not set
 # CONFIG_PKG_xine-ui is not set
@@ -797,7 +810,7 @@ CONFIG_PKG_network-backend=y
 # CONFIG_PKG_olsrd is not set
 # CONFIG_PKG_openvpn is not set
 CONFIG_PKG_samba-client=y
-# CONFIG_PKG_samba-server is not set
+CONFIG_PKG_samba-server=m
 # CONFIG_PKG_tcpdump is not set
 # CONFIG_PKG_udhcpc is not set
 CONFIG_PKG_wireless-tools=y
@@ -943,7 +956,7 @@ CONFIG_PKG_eglibc=y
 # CONFIG_OPT_eglibc_ipv6 is not set
 CONFIG_PKG_eglibc-gconv-extra=y
 CONFIG_PKG_eglibc-gconv-minimal=y
-CONFIG_PKG_eglibc-gdb=y
+CONFIG_PKG_eglibc-gdb=m
 CONFIG_PKG_eglibc-network=y
 # CONFIG_PKG_evtest is not set
 # CONFIG_PKG_freevo-config is not set
@@ -965,12 +978,12 @@ CONFIG_OPT_linux_lirc=y
 # CONFIG_OPT_linux_lvm is not set
 CONFIG_OPT_linux_mmc=y
 CONFIG_OPT_linux_ms=y
-# CONFIG_OPT_linux_pata is not set
+CONFIG_OPT_linux_pata=y
 # CONFIG_OPT_linux_pccard is not set
 # CONFIG_OPT_linux_ppt is not set
 # CONFIG_OPT_linux_radio is not set
 CONFIG_OPT_linux_rtc=y
-# CONFIG_OPT_linux_sata is not set
+CONFIG_OPT_linux_sata=y
 CONFIG_OPT_linux_usb=y
 CONFIG_OPT_linux_usbnet=y
 CONFIG_OPT_linux_v4l=y
@@ -1003,7 +1016,7 @@ CONFIG_PKG_dialog=y
 # CONFIG_PKG_dvb-apps is not set
 # CONFIG_PKG_expedite is not set
 CONFIG_PKG_extra-fonts-nonfree=y
-CONFIG_PKG_gdb=y
+# CONFIG_PKG_gdb is not set
 # CONFIG_PKG_generator is not set
 # CONFIG_PKG_graphlcd-base is not set
 # CONFIG_PKG_gtk-demo is not set
@@ -1017,7 +1030,7 @@ CONFIG_PKG_gdb=y
 CONFIG_PKG_rtmpdump=y
 # CONFIG_PKG_screen is not set
 # CONFIG_PKG_snowball-mactool is not set
-CONFIG_PKG_strace=y
+CONFIG_PKG_strace=m
 # CONFIG_PKG_tools-generator is not set
 # CONFIG_PKG_unrar is not set
 CONFIG_PKG_usbutils=y
