--- a/config/platforms/arm/armada5xx/linux.conf
+++ b/config/platforms/arm/armada5xx/linux.conf
@@ -820,7 +820,7 @@ CONFIG_SCSI_WAIT_SCAN=m
 # CONFIG_SCSI_LOWLEVEL is not set
 # CONFIG_SCSI_DH is not set
 # CONFIG_SCSI_OSD_INITIATOR is not set
-CONFIG_ATA=y
+CONFIG_ATA=m
 # CONFIG_ATA_NONSTANDARD is not set
 CONFIG_ATA_VERBOSE_ERROR=y
 CONFIG_SATA_PMP=y
@@ -847,7 +847,7 @@ CONFIG_ATA_BMDMA=y
 # SATA SFF controllers with BMDMA
 #
 # CONFIG_ATA_PIIX is not set
-CONFIG_SATA_MV=y
+CONFIG_SATA_MV=m
 # CONFIG_SATA_NV is not set
 # CONFIG_SATA_PROMISE is not set
 # CONFIG_SATA_SIL is not set
