marvell-ipp : add support for armhf (partially)

--- a/packages/marvell-ipp/build
+++ b/packages/marvell-ipp/build
@@ -8,5 +8,8 @@ mkdir -p .install/include/marvell-ipp
 cp include/* .install/include/marvell-ipp
 
 mkdir -p .install/usr/lib
-cp bin/*.so* .install/usr/lib
+cp -P bin/*.so* .install/usr/lib
+if [ "$ARM_HARDFLOAT_ABI" = yes ] ; then 
+  cp lib-hard/*.so* .install/usr/lib
+fi
 
