update defconfig for cubox

--- a/config/defconfigs/geexbox-xbmc-armada5xx-cubox.conf
+++ b/config/defconfigs/geexbox-xbmc-armada5xx-cubox.conf
@@ -307,36 +307,36 @@ CONFIG_PKG_firmware-dvb-wt220u=y
 CONFIG_PKG_firmware-dvb-xc3028=y
 # CONFIG_PKG_firmware-graphics-nouveau is not set
 # CONFIG_PKG_firmware-graphics-radeon is not set
-# CONFIG_PKG_firmware-nic-wifi-realtek is not set
+CONFIG_PKG_firmware-nic-wifi-realtek=y
 # CONFIG_PKG_firmware-ux500 is not set
-# CONFIG_PKG_firmware-wifi-acx100 is not set
-# CONFIG_PKG_firmware-wifi-acx100usb is not set
-# CONFIG_PKG_firmware-wifi-acx111usb is not set
-# CONFIG_PKG_firmware-wifi-acx11x is not set
-# CONFIG_PKG_firmware-wifi-atmel is not set
-# CONFIG_PKG_firmware-wifi-b43 is not set
-# CONFIG_PKG_firmware-wifi-b43-lpphy is not set
-# CONFIG_PKG_firmware-wifi-b43legacy is not set
-# CONFIG_PKG_firmware-wifi-brcm80211 is not set
-# CONFIG_PKG_firmware-wifi-carl9170 is not set
-# CONFIG_PKG_firmware-wifi-intel-an6200-un6300 is not set
-# CONFIG_PKG_firmware-wifi-intel-an6205 is not set
-# CONFIG_PKG_firmware-wifi-intel-an6230-wn1030-wn130 is not set
-# CONFIG_PKG_firmware-wifi-intel-pw2100 is not set
-# CONFIG_PKG_firmware-wifi-intel-pw2200 is not set
-# CONFIG_PKG_firmware-wifi-intel-pw3945 is not set
-# CONFIG_PKG_firmware-wifi-intel-wl4965 is not set
-# CONFIG_PKG_firmware-wifi-intel-wl5000 is not set
-# CONFIG_PKG_firmware-wifi-intel-wl5150 is not set
-# CONFIG_PKG_firmware-wifi-intel-wm6250-wm6150 is not set
-# CONFIG_PKG_firmware-wifi-intel-wn100 is not set
-# CONFIG_PKG_firmware-wifi-intel-wn1000 is not set
+CONFIG_PKG_firmware-wifi-acx100=y
+CONFIG_PKG_firmware-wifi-acx100usb=y
+CONFIG_PKG_firmware-wifi-acx111usb=y
+CONFIG_PKG_firmware-wifi-acx11x=y
+CONFIG_PKG_firmware-wifi-atmel=y
+CONFIG_PKG_firmware-wifi-b43=y
+CONFIG_PKG_firmware-wifi-b43-lpphy=y
+CONFIG_PKG_firmware-wifi-b43legacy=y
+CONFIG_PKG_firmware-wifi-brcm80211=y
+CONFIG_PKG_firmware-wifi-carl9170=y
+CONFIG_PKG_firmware-wifi-intel-an6200-un6300=y
+CONFIG_PKG_firmware-wifi-intel-an6205=y
+CONFIG_PKG_firmware-wifi-intel-an6230-wn1030-wn130=y
+CONFIG_PKG_firmware-wifi-intel-pw2100=y
+CONFIG_PKG_firmware-wifi-intel-pw2200=y
+CONFIG_PKG_firmware-wifi-intel-pw3945=y
+CONFIG_PKG_firmware-wifi-intel-wl4965=y
+CONFIG_PKG_firmware-wifi-intel-wl5000=y
+CONFIG_PKG_firmware-wifi-intel-wl5150=y
+CONFIG_PKG_firmware-wifi-intel-wm6250-wm6150=y
+CONFIG_PKG_firmware-wifi-intel-wn100=y
+CONFIG_PKG_firmware-wifi-intel-wn1000=y
 # CONFIG_PKG_firmware-wifi-marvel-libertas is not set
-# CONFIG_PKG_firmware-wifi-prism54 is not set
-# CONFIG_PKG_firmware-wifi-ralink is not set
-# CONFIG_PKG_firmware-wifi-wilink12xx is not set
-# CONFIG_PKG_firmware-wifi-zd1201 is not set
-# CONFIG_PKG_firmware-wifi-zd1211-ar5007 is not set
+CONFIG_PKG_firmware-wifi-prism54=y
+CONFIG_PKG_firmware-wifi-ralink=y
+CONFIG_PKG_firmware-wifi-wilink12xx=y
+CONFIG_PKG_firmware-wifi-zd1201=y
+CONFIG_PKG_firmware-wifi-zd1211-ar5007=y
 # CONFIG_PKG_sysbios-rpmsg is not set
 
 #
