--- a/config/defconfigs/geexbox-xbmc-omap4-pandaboard.conf
+++ b/config/defconfigs/geexbox-xbmc-omap4-pandaboard.conf
@@ -516,6 +516,7 @@ CONFIG_PKG_libnl=y
 CONFIG_PKG_libogg=y
 # CONFIG_PKG_liboil is not set
 # CONFIG_PKG_libosip2 is not set
+# CONFIG_PKG_libpbc is not set
 # CONFIG_PKG_libpcap is not set
 # CONFIG_PKG_libpcd is not set
 CONFIG_PKG_libplist=y
@@ -615,19 +616,25 @@ CONFIG_PKG_zlib=y
 #
 # misc
 #
+# CONFIG_PKG_alsacap is not set
 # CONFIG_PKG_baresip is not set
+# CONFIG_PKG_chrpath is not set
 # CONFIG_PKG_cpuburn is not set
 # CONFIG_PKG_elfutils is not set
 # CONFIG_PKG_ethtool is not set
+# CONFIG_PKG_evemu is not set
 # CONFIG_PKG_glmark2 is not set
 # CONFIG_PKG_hdmiservice is not set
+# CONFIG_PKG_hiawatha is not set
 # CONFIG_PKG_iioutils is not set
+# CONFIG_PKG_libcheck is not set
 # CONFIG_PKG_libxkbcommon is not set
 # CONFIG_PKG_linphone is not set
 # CONFIG_PKG_madplay is not set
 # CONFIG_PKG_maliit-framework is not set
 # CONFIG_PKG_maliit-plugins is not set
 # CONFIG_PKG_nbench is not set
+# CONFIG_PKG_patchelf is not set
 # CONFIG_PKG_powerdebug is not set
 # CONFIG_PKG_powertop is not set
 CONFIG_PKG_pvr=y
@@ -636,9 +643,11 @@ CONFIG_OPT_pvr_vdr=y
 # CONFIG_PKG_rsync is not set
 # CONFIG_PKG_stream is not set
 # CONFIG_PKG_uci is not set
+# CONFIG_PKG_usbhubctrl is not set
 # CONFIG_PKG_wayland is not set
 # CONFIG_PKG_webrtc-audio-processing is not set
 # CONFIG_PKG_weston is not set
+# CONFIG_PKG_yavta is not set
 
 #
 # multimedia
@@ -694,6 +703,7 @@ CONFIG_PKG_libdvdcss=y
 # CONFIG_PKG_libvdpau is not set
 # CONFIG_PKG_livepause is not set
 # CONFIG_PKG_mali400 is not set
+# CONFIG_PKG_media-ctl is not set
 # CONFIG_PKG_mex is not set
 # CONFIG_PKG_mythplugins is not set
 # CONFIG_PKG_myththemes is not set
@@ -718,7 +728,7 @@ CONFIG_PKG_vdr=y
 # CONFIG_PKG_vdr-dvbapi is not set
 # CONFIG_PKG_vdr-dvbsddevice is not set
 # CONFIG_PKG_vdr-dvd is not set
-# CONFIG_PKG_vdr-dynamite is not set
+CONFIG_PKG_vdr-dynamite=y
 # CONFIG_PKG_vdr-eepg is not set
 # CONFIG_PKG_vdr-epgsearch is not set
 # CONFIG_PKG_vdr-extrecmenu is not set
@@ -789,6 +799,7 @@ CONFIG_OPT_xbmc_xorg=y
 CONFIG_OPT_xbmc_sdl=y
 CONFIG_OPT_xbmc_alsa=y
 CONFIG_PKG_xbmc-addon-vdr=y
+CONFIG_PKG_xbmc-addon-vuplus=y
 # CONFIG_PKG_xine-bluray is not set
 # CONFIG_PKG_xine-lib is not set
 # CONFIG_PKG_xine-ui is not set
