update defconfig file for i386

--- a/config/defconfigs/geexbox-xbmc-i386-generic.conf
+++ b/config/defconfigs/geexbox-xbmc-i386-generic.conf
@@ -2,7 +2,7 @@
 # Automatically generated file; DO NOT EDIT.
 # OpenBricks Configuration
 #
-CONFIG_KERNELVERSION="devel-20120730-r14886"
+CONFIG_KERNELVERSION="devel-20120710-r14678"
 CONFIG_MODULES=y
 # CONFIG_FLAVOUR_base is not set
 CONFIG_FLAVOUR_geexbox=y
@@ -125,11 +125,11 @@ CONFIG_OPT_PACKAGE_REPO=y
 CONFIG_TIMEZONE=y
 CONFIG_OPT_INCLUDED_TIMEZONES="all"
 CONFIG_OPT_TIMEZONE=""
-CONFIG_KEYMAP_QWERTY=y
-# CONFIG_KEYMAP_AZERTY is not set
-# CONFIG_KEYMAP_QWERTZ is not set
+CONFIG_KEYMAP_US=y
+# CONFIG_KEYMAP_FR is not set
+# CONFIG_KEYMAP_DE is not set
 CONFIG_LOCALE=y
-CONFIG_OPT_INCLUDED_LOCALES="en_US.UTF-8"
+CONFIG_OPT_INCLUDED_LOCALES=""
 CONFIG_OPT_DEFAULT_LOCALE="en_US.UTF-8"
 
 #
@@ -238,8 +238,8 @@ CONFIG_OPT_FTP_SERVER=y
 # CONFIG_HTTP_SERVER is not set
 CONFIG_OPT_SAMBA=y
 # CONFIG_SAMBA_SERVER is not set
-CONFIG_AUTOMOUNTER_SMB=y
-CONFIG_AUTOMOUNTER_NFS=y
+# CONFIG_AUTOMOUNTER_SMB is not set
+# CONFIG_AUTOMOUNTER_NFS is not set
 # CONFIG_AUTOMOUNTER_9P is not set
 
 #
@@ -259,7 +259,7 @@ CONFIG_PKG_efibootmgr=y
 CONFIG_PKG_hdparm=y
 CONFIG_PKG_installator=y
 CONFIG_OPT_INSTALLATOR=y
-# CONFIG_PKG_ndiswrapper-tool is not set
+CONFIG_PKG_ndiswrapper-tool=m
 CONFIG_PKG_nvram-wakeup=y
 CONFIG_PKG_opkg=y
 CONFIG_PKG_pcmciautils=y
@@ -278,7 +278,7 @@ CONFIG_PKG_crystalhd=y
 CONFIG_PKG_eventlircd=y
 CONFIG_PKG_lirc=y
 CONFIG_OPT_lirc_devtools=y
-# CONFIG_PKG_ndiswrapper is not set
+CONFIG_PKG_ndiswrapper=m
 # CONFIG_PKG_s2-liplianin is not set
 # CONFIG_PKG_tbs-drivers is not set
 # CONFIG_PKG_tibtfm-wl1271 is not set
@@ -295,6 +295,7 @@ CONFIG_PKG_fuse=y
 # CONFIG_PKG_fuse-exfat is not set
 # CONFIG_PKG_fuseiso is not set
 # CONFIG_PKG_gnu-fdisk is not set
+CONFIG_PKG_mpd=y
 # CONFIG_PKG_mtd-utils is not set
 CONFIG_PKG_nfs-utils=y
 CONFIG_PKG_ntfs-3g=y
@@ -304,7 +305,6 @@ CONFIG_PKG_parted=y
 #
 # firmware
 #
-# CONFIG_PKG_firmware-arm-raspberrypi is not set
 CONFIG_PKG_firmware-bluetooth-bluez=y
 CONFIG_PKG_firmware-dvb-af9015=y
 CONFIG_PKG_firmware-dvb-avertv-a800=y
@@ -361,7 +361,7 @@ CONFIG_PKG_firmware-wifi-intel-wn1000=y
 CONFIG_PKG_firmware-wifi-marvel-libertas=y
 CONFIG_PKG_firmware-wifi-prism54=y
 CONFIG_PKG_firmware-wifi-ralink=y
-# CONFIG_PKG_firmware-wifi-wilink12xx is not set
+CONFIG_PKG_firmware-wifi-wilink12xx=y
 CONFIG_PKG_firmware-wifi-zd1201=y
 CONFIG_PKG_firmware-wifi-zd1211-ar5007=y
 # CONFIG_PKG_sysbios-rpmsg is not set
@@ -467,7 +467,7 @@ CONFIG_PKG_gnutls=y
 # CONFIG_PKG_gupnp-igd is not set
 # CONFIG_PKG_hal is not set
 # CONFIG_PKG_hicolor-icon-theme is not set
-# CONFIG_PKG_htop is not set
+CONFIG_PKG_htop=y
 CONFIG_PKG_i18n=y
 # CONFIG_OPT_i18n_fonts is not set
 # CONFIG_PKG_icu4c is not set
@@ -532,6 +532,7 @@ CONFIG_PKG_libnl=y
 CONFIG_PKG_libogg=y
 # CONFIG_PKG_liboil is not set
 # CONFIG_PKG_libosip2 is not set
+# CONFIG_PKG_libpbc is not set
 # CONFIG_PKG_libpcap is not set
 # CONFIG_PKG_libpcd is not set
 CONFIG_PKG_libplist=y
@@ -547,7 +548,7 @@ CONFIG_PKG_libshairport=y
 # CONFIG_PKG_libshout is not set
 # CONFIG_PKG_libsigc is not set
 CONFIG_PKG_libsmbclient=y
-# CONFIG_PKG_libsndfile is not set
+CONFIG_PKG_libsndfile=y
 # CONFIG_PKG_libsoup is not set
 CONFIG_PKG_libssh=y
 # CONFIG_PKG_libsvg is not set
@@ -582,7 +583,7 @@ CONFIG_OPT_mesa_xvmc=y
 # CONFIG_PKG_mx is not set
 CONFIG_PKG_ncurses=y
 # CONFIG_OPT_ncurses_terminfo is not set
-# CONFIG_PKG_ncursesw is not set
+CONFIG_PKG_ncursesw=y
 CONFIG_PKG_nettle=y
 CONFIG_PKG_openssl=y
 # CONFIG_PKG_orc is not set
@@ -632,17 +633,23 @@ CONFIG_PKG_zlib=y
 #
 # misc
 #
+# CONFIG_PKG_alsacap is not set
 # CONFIG_PKG_baresip is not set
+# CONFIG_PKG_chrpath is not set
 # CONFIG_PKG_elfutils is not set
 # CONFIG_PKG_ethtool is not set
+# CONFIG_PKG_evemu is not set
 # CONFIG_PKG_glmark2 is not set
+# CONFIG_PKG_hiawatha is not set
 # CONFIG_PKG_iioutils is not set
+# CONFIG_PKG_libcheck is not set
 # CONFIG_PKG_libxkbcommon is not set
 # CONFIG_PKG_linphone is not set
 # CONFIG_PKG_madplay is not set
 # CONFIG_PKG_maliit-framework is not set
 # CONFIG_PKG_maliit-plugins is not set
 # CONFIG_PKG_nbench is not set
+# CONFIG_PKG_patchelf is not set
 # CONFIG_PKG_powerdebug is not set
 # CONFIG_PKG_powertop is not set
 CONFIG_PKG_pvr=y
@@ -651,9 +658,11 @@ CONFIG_OPT_pvr_vdr=y
 # CONFIG_PKG_rsync is not set
 # CONFIG_PKG_stream is not set
 # CONFIG_PKG_uci is not set
+# CONFIG_PKG_usbhubctrl is not set
 # CONFIG_PKG_wayland is not set
 # CONFIG_PKG_webrtc-audio-processing is not set
 # CONFIG_PKG_weston is not set
+# CONFIG_PKG_yavta is not set
 
 #
 # multimedia
@@ -663,9 +672,7 @@ CONFIG_OPT_pvr_vdr=y
 # CONFIG_PKG_boxee is not set
 # CONFIG_PKG_dvbstreamer is not set
 # CONFIG_PKG_enna is not set
-CONFIG_PKG_ffmpeg=y
-CONFIG_OPT_ffmpeg_vdpau=y
-CONFIG_OPT_ffmpeg_vaapi=y
+# CONFIG_PKG_ffmpeg is not set
 # CONFIG_PKG_freevo is not set
 # CONFIG_PKG_freevo-svn is not set
 # CONFIG_PKG_gst-auto-launch is not set
@@ -696,6 +703,7 @@ CONFIG_PKG_libva-xvba=y
 # CONFIG_PKG_libvalhalla is not set
 CONFIG_PKG_libvdpau=y
 # CONFIG_PKG_livepause is not set
+# CONFIG_PKG_media-ctl is not set
 # CONFIG_PKG_mex is not set
 # CONFIG_PKG_mythplugins is not set
 # CONFIG_PKG_myththemes is not set
@@ -707,11 +715,12 @@ CONFIG_PKG_libvdpau=y
 # CONFIG_PKG_showtime is not set
 # CONFIG_PKG_skype-static is not set
 CONFIG_PKG_tvheadend=y
-# CONFIG_OPT_tvheadend_zeroconf is not set
+CONFIG_OPT_tvheadend_zeroconf=y
 CONFIG_PKG_vdr=y
 # CONFIG_PKG_vdr-avards is not set
 # CONFIG_PKG_vdr-devstatus is not set
 # CONFIG_PKG_vdr-dummydevice is not set
+# CONFIG_PKG_vdr-dvbapi is not set
 # CONFIG_PKG_vdr-dvbsddevice is not set
 # CONFIG_PKG_vdr-dvd is not set
 CONFIG_PKG_vdr-dynamite=y
@@ -787,6 +796,7 @@ CONFIG_OPT_xbmc_xorg=y
 CONFIG_OPT_xbmc_sdl=y
 CONFIG_OPT_xbmc_alsa=y
 CONFIG_PKG_xbmc-addon-vdr=y
+CONFIG_PKG_xbmc-addon-vuplus=y
 # CONFIG_PKG_xine-bluray is not set
 # CONFIG_PKG_xine-lib is not set
 # CONFIG_PKG_xine-ui is not set
@@ -796,8 +806,8 @@ CONFIG_PKG_xbmc-addon-vdr=y
 #
 CONFIG_PKG_amionline=y
 # CONFIG_PKG_automounter-9p is not set
-CONFIG_PKG_automounter-nfs=y
-CONFIG_PKG_automounter-smb=y
+CONFIG_PKG_automounter-nfs=m
+CONFIG_PKG_automounter-smb=m
 CONFIG_PKG_bftpd=y
 # CONFIG_PKG_bluez is not set
 CONFIG_PKG_connman=y
@@ -817,9 +827,9 @@ CONFIG_PKG_network-backend=y
 # CONFIG_PKG_olsrd is not set
 # CONFIG_PKG_openvpn is not set
 CONFIG_PKG_samba-client=y
-# CONFIG_PKG_samba-server is not set
+CONFIG_PKG_samba-server=m
 # CONFIG_PKG_tcpdump is not set
-# CONFIG_PKG_udhcpc is not set
+CONFIG_PKG_udhcpc=y
 CONFIG_PKG_wireless-tools=y
 CONFIG_OPT_wirelesstools_devtools=y
 CONFIG_PKG_wpa-supplicant=y
@@ -1059,8 +1069,9 @@ CONFIG_PKG_wscan=y
 CONFIG_PKG_xbmc-addon-bluecop=y
 CONFIG_PKG_xbmc-addon-geexbox-network=y
 CONFIG_PKG_xbmc-addon-geexbox-updater=y
+CONFIG_PKG_xbmc-addon-navi-x=y
 # CONFIG_PKG_xdotool is not set
-CONFIG_PKG_xvattr=m
+# CONFIG_PKG_xvattr is not set
 
 #
 # x11
@@ -1130,8 +1141,6 @@ CONFIG_PKG_xf86-video-nv=y
 CONFIG_PKG_xf86-video-nvidia=m
 CONFIG_OPT_xf86videonvidia_vdpau=y
 CONFIG_PKG_xf86-video-nvidia-legacy=m
-CONFIG_PKG_xf86-video-nvidia-old=m
-# CONFIG_PKG_xf86-video-nvidia-very-old is not set
 CONFIG_PKG_xf86-video-openchrome=y
 # CONFIG_PKG_xf86-video-r128 is not set
 # CONFIG_PKG_xf86-video-s3 is not set
@@ -1156,7 +1165,7 @@ CONFIG_OPT_FPU_OPTIMIZATIONS="no"
 CONFIG_OPT_TOOLCHAIN_TYPE="openbricks"
 CONFIG_OPT_COMPRESSION_METHOD="xz"
 CONFIG_OPT_TARGET_LIBC="eglibc"
-CONFIG_OPT_KEYMAP="qwerty"
+CONFIG_OPT_KEYMAP="us"
 CONFIG_OPT_EGL_PROVIDER="mesa"
 CONFIG_OPT_GLES_PROVIDER="mesa"
 CONFIG_OPT_NETWORK_BACKEND="connman"
